--- a/src/app/modules/home/page/home.component.html
+++ b/src/app/modules/home/page/home.component.html
@@ -1,4 +1,4 @@
 <div class="home flex justify-around h-24 min-h-screen items-center flex-col ">
-  <h1>CryptoCoins</h1>
-  <button routerLink='/list-coins' routerLinkActive="router-link-active"  type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Alternative</button>
+  <h1 class="text-4xl">CryptoCoins</h1>
+  <button routerLink='/list-coins' routerLinkActive="router-link-active"  type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-blue-700 rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Alternative</button>
 </div>
