--- a/src/app/shared/components/card-coin/card-coin.component.html
+++ b/src/app/shared/components/card-coin/card-coin.component.html
@@ -1,6 +1,6 @@
 <div class="flow-root flex items-center justify-center">
-  <ul role="list" class=" divide-y divide-gray-200 dark:divide-gray-700">
-      <li class="py-3 sm:py-4">
+  <ul role="list" class="list  my-2 divide-y divide-gray-200 dark:divide-gray-700">
+      <li routerLink='/detail-coin/{{coin.id}}' routerLinkActive="router-link-active"  class="shadow  py-3 sm:py-4 ">
           <div class="flex items-center space-x-4">
               <div class="flex-shrink-0">
                   <img class="w-8 h-8 rounded-full" src='https://assets.coingecko.com/coins/images/4934/large/0_Black-svg.png?1600757954'alt="Neil image">
