--- a/src/app/modules/home/page/home.component.html
+++ b/src/app/modules/home/page/home.component.html
@@ -1,4 +1,21 @@
-<div class="home flex justify-around h-24 min-h-screen items-center flex-col ">
-  <h1 class="text-4xl">CryptoCoins</h1>
-  <button routerLink='/list-coins' routerLinkActive="router-link-active"  type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-blue-700 rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Alternative</button>
+
+<!-- <div>
+  <div class="home flex justify-around h-24 min-h-screen items-center flex-col ">
+    <h1 class="text-4xl">CryptoCoins</h1>
+    <button routerLink='/list-coins' routerLinkActive="router-link-active"  type="button" class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-blue-700 rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 ">Alternative</button>
+  </div>
+  <div>
+    <img src="" alt="">
+  </div>
+</div> -->
+<div class="home hero flex items-center justify-around min-h-screen text-white" style="background-image: url(https://placeimg.com/1000/800/arch);">
+  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-content text-center text-neutral-content">
+    <div class="titleHero rounded-lg p-4 max-w-md">
+      <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+      <p class="mb-5">The purpose of this website is solely to display information regarding the products and services available on the Crypto App.</p>
+      <button routerLink='/list-coins' routerLinkActive="router-link-active"  type="button" class="py-2.5 px-5 mr-2 mb-2 text-white text-sm font-medium focus:outline-none rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 ">Get in</button>
+    </div>
+  </div>
 </div>
+
