--- a/src/app/modules/detail-coin/page/detail-coin.component.sass
+++ b/src/app/modules/detail-coin/page/detail-coin.component.sass
@@ -1,8 +1,36 @@
 .detail
-  background-color: #f5f5f5
-  min-height: 100vh
-  padding: 2rem
-  img
-    width: 100px
+  height: 100vh
+  max-width: 100vw
+  .title
+    width: 100%
+    display: flex
+    justify-content: space-around
+    margin: 0 1rem
+    .mat
+      width: 100%
+      font-size: 2rem
+      font-weight: bold
+      margin-bottom: 1rem
+      &:hover
+        transform: scale(1.2)
+        transition: all 0.4s ease-in-out
+    .infoTitle
+      border-radius: 1rem
+      background-color: #0a1233de
+      margin-bottom: 1rem
+      padding: 1rem
+  .imgCoin
+    width: 120px
+    height: 120px
     border-radius: 50%
-    margin-left: 1rem
+    overflow: hidden
+    margin-right: 2rem
+    background-color: #1a244e
+    img
+      width: 100%
+.infoCoin
+  width: 95%
+  height: 100%
+  background-color: #1a244e
+  border-top-left-radius: 3rem
+  border-top-right-radius: 3rem
