--- a/src/app/modules/home/page/home.component.sass
+++ b/src/app/modules/home/page/home.component.sass
@@ -1,3 +1,7 @@
 .home
-  min-height: 100vh,
+  height: 100vh,
   justify-content: space-around
+  .titleHero
+    background-color: #1a244ea9
+    box-shadow: rgba(9, 5, 29, 0.173) 0 10px 10px 0
+    backdrop-filter: blur(15px)
