--- a/src/app/modules/list-coins/page/list-coins.component.sass
+++ b/src/app/modules/list-coins/page/list-coins.component.sass
@@ -1,8 +1,12 @@
 .listCoins
-  padding: 1rem
+  padding-top: 1rem
+  min-height: 100vh
   width: 100%
-  background-color: #9fa4b3
+  background-color: #1a244e
   .contList
-    border-radius: 20px
-    padding: 2rem
+    min-height: calc( 100vh - 100px )
+    width: 100%
+    border-top-left-radius: 3rem
+    border-top-right-radius: 3rem
+    padding: 1rem
     background-color: #f7f7f7
