--- a/src/app/shared/components/card-coin/card-coin.component.sass
+++ b/src/app/shared/components/card-coin/card-coin.component.sass
@@ -7,6 +7,6 @@
   width: 100%
   margin-top: 1rem
   cursor: pointer
+  border-radius: 15px
   &:hover
-    background-color: #f5f5f5
-    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2)
+    background-color: #f0f0f0
