--- a/src/app/modules/home/page/home.component.sass
+++ b/src/app/modules/home/page/home.component.sass
@@ -2,6 +2,7 @@
   height: 100vh,
   justify-content: space-around
   .titleHero
+    padding: 4rem
     background-color: #1a244ea9
     box-shadow: rgba(9, 5, 29, 0.173) 0 10px 10px 0
     backdrop-filter: blur(15px)
